tech proximity measure 만들기
17.10.27

--- a/app citatation.ipynb
+++ b/app citatation.ipynb
@@ -10,7 +10,8 @@
     "- (patent_id -> number)를 (gvkey -> gvkey)로 바꾸기\n",
     "\n",
     "### 2. weight로 사용할 similarity\n",
-    "- app cite한 기업 사이 technological similarity 계산: 기존 논문 참고 좀 하자\n",
+    "- app cite한 기업 사이 technological similarity (proximity) 계산 \n",
+    "- 각 기업별 patent class 비율 vector 구해서 correlation 보면 됨 \n",
     "\n",
     "### 3. weight sum\n",
     "- 걍 weight sum해서 firm level 변수 제작"
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -698,6 +699,318 @@
     "bio.to_csv('E:/apps/app_cit_edge_BIO.csv',index=False)\n",
     "ee.to_csv('E:/apps/app_cit_edge_EE&IT.csv',index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. weight로 사용할 similarity (tech proximity)\n",
+    "__2.1 기업별 patent class vector 제작__\n",
+    "- 기업별 patent class 파악 (patent_class, patent_assignee, gvkey join)  \n",
+    "__=> gvkey, uspc, year__  \n",
+    "- 기업, 연도 레벨로 patent class aggregate(count, groupby gvkey, year, uspc)  \n",
+    "__=>gvkey, year, uspc, count__\n",
+    "- matrix로 제작 (uspc X gvkey pivot), count를 비율로 변경 \n",
+    "\n",
+    "__2.2 기업간 proximity matrix 제작__\n",
+    "- 예전에 햇던 거 조금 수정하면 됨"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__1. 기업별 patent class 파악__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "os.chdir('E:/apps/db_table')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "139224 850774\n"
+     ]
+    }
+   ],
+   "source": [
+    "bio = pd.read_csv('patent_class_BIO.csv')\n",
+    "ee = pd.read_csv('patent_class_EE&IT.csv')\n",
+    "\n",
+    "bio = bio.loc[:,['patent_id','uspc','year']]\n",
+    "ee = ee.loc[:,['patent_id','uspc','year']]\n",
+    "\n",
+    "print len(bio), len(ee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "116260 783601\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('patent_assignee.csv')\n",
+    "\n",
+    "bio = bio.merge(df,how='left',on='patent_id')\n",
+    "ee = ee.merge(df,how='left',on='patent_id')\n",
+    "\n",
+    "bio = bio.loc[:,['assignee','uspc','year']]\n",
+    "ee = ee.loc[:,['assignee','uspc','year']]\n",
+    "\n",
+    "bio.dropna(how='any',inplace=True)  #drop patents which don't have assignee\n",
+    "ee.dropna(how='any',inplace=True)\n",
+    "print len(bio), len(ee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54112 554481\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('assignee_gvkey_BIO.csv')\n",
+    "df1 = pd.read_csv('assignee_gvkey_EE&IT.csv')\n",
+    "\n",
+    "bio = bio.merge(df,how='left',on='assignee')\n",
+    "ee = ee.merge(df1,how='left',on='assignee')\n",
+    "\n",
+    "bio = bio.loc[:,['gvkey','uspc','year']]\n",
+    "ee = ee.loc[:,['gvkey','uspc','year']]\n",
+    "\n",
+    "bio.dropna(how='any',inplace=True)  #drop patents which don't have assignee\n",
+    "ee.dropna(how='any',inplace=True)\n",
+    "print len(bio), len(ee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "bio.to_csv('bio_temp.csv',index=False)\n",
+    "ee.to_csv('ee_temp.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__2. firm-year level aggregation__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5480 56897\n"
+     ]
+    }
+   ],
+   "source": [
+    "bio['count'] = ''\n",
+    "ee['count'] = ''\n",
+    "\n",
+    "bio = bio.groupby(['gvkey','year','uspc'], as_index=False).agg('count')\n",
+    "ee = ee.groupby(['gvkey','year','uspc'], as_index=False).agg('count')\n",
+    "\n",
+    "print len(bio), len(ee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "bio.to_csv('bio_temp.csv',index=False)\n",
+    "ee.to_csv('ee_temp.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__3. matrix로 변경__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bio = pd.read_csv('bio_temp.csv')\n",
+    "ee = pd.read_csv('ee_temp.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_ratio(row):\n",
+    "    tot = sum(row)\n",
+    "    row = map(lambda x: round(float(x)/tot,3), row)    \n",
+    "\n",
+    "    return row\n",
+    "\n",
+    "def pivot(df,y):\n",
+    "    df = df.loc[df['year']==y,:]\n",
+    "    df = pd.pivot_table(df,index='gvkey',columns='uspc', values='count', fill_value=0)\n",
+    "    df = df.apply(get_ratio, axis=1,reduce = False)\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir('E:/apps/appcit measure')\n",
+    "\n",
+    "for i in range(2005,2013):\n",
+    "    bdf = pivot(bio,i)\n",
+    "    fname = 'class_vector_bio_' + str(i) +'.csv'\n",
+    "    bdf.to_csv(fname)\n",
+    "    \n",
+    "    edf = pivot(ee,i)\n",
+    "    fname = 'class_vector_EE&IT_' + str(i) +'.csv'\n",
+    "    edf.to_csv(fname)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__4. proximity 계산__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "from math import sqrt \n",
+    "\n",
+    "def prox_numer(l1,l2):\n",
+    "    cnt = 0.0\n",
+    "    for i in xrange(len(l1)):\n",
+    "        if l1[i]!=0 and l2[i]!=0:\n",
+    "            w= float(l1[i]) * l2[i]\n",
+    "            cnt += w\n",
+    "    \n",
+    "    return round(cnt,3) \n",
+    "\n",
+    "def prox_denom(l1,l2):\n",
+    "    a = sqrt(sum(map(lambda x: x**2, l1)))\n",
+    "    b = sqrt(sum(map(lambda x: x**2, l2)))\n",
+    "    \n",
+    "    return a*b \n",
+    "\n",
+    "def proximity(l1,l2):\n",
+    "    return prox_numer(l1,l2) / prox_denom(l1,l2)\n",
+    "\n",
+    "def get_prox(l1,arr):\n",
+    "    sim = []\n",
+    "    for row in arr:\n",
+    "        sim.append(proximity(l1,row))\n",
+    "        \n",
+    "    return sim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.812 0.81206157402 0.999924175676\n"
+     ]
+    }
+   ],
+   "source": [
+    "def prox_denom(l1,l2):\n",
+    "    a = sqrt(sum(map(lambda x: x**2, l1)))\n",
+    "    b = sqrt(sum(map(lambda x: x**2, l2)))\n",
+    "    \n",
+    "    return a*b \n",
+    "\n",
+    "l1 = [0.1,0.9]\n",
+    "l2 = [0.11,0.89]\n",
+    "\n",
+    "print prox_numer(l1,l2), prox_denom(l1,l2), prox_numer(l1,l2)/prox_denom(l1,l2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
