--- a/for_test.ipynb
+++ b/for_test.ipynb
@@ -1314,6 +1314,90 @@
    "source": [
     "i"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 기업간 proximity matrix 제작"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import csv\n",
+    "import os\n",
+    "import math\n",
+    "from math import sqrt\n",
+    "\n",
+    "os.chdir('J:/data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def prox_numer(l1,l2):\n",
+    "    cnt = 0.0\n",
+    "    for i in xrange(len(l1)):\n",
+    "        if l1[i]!=0 and l2[i]!=0:\n",
+    "            w= float(l1[i]) * l2[i]\n",
+    "            cnt += w\n",
+    "    \n",
+    "    return round(cnt,3) \n",
+    "\n",
+    "def prox_denom(l1,l2):\n",
+    "    a = sqrt(sum(map(lambda x: x**2, l1)))\n",
+    "    b = sqrt(sum(map(lambda x: x**2, l2)))\n",
+    "    \n",
+    "    return a*b \n",
+    "\n",
+    "def proximity(l1,l2):\n",
+    "    return prox_numer(l1,l2) / prox_denom(l1,l2)\n",
+    "\n",
+    "def get_prox(l1,arr):\n",
+    "    sim = []\n",
+    "    for row in arr:\n",
+    "        sim.append(proximity(l1,row))\n",
+    "        \n",
+    "    return sim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = pd.read_csv('sample.csv').values\n",
+    "\n",
+    "header = arr[:,0].tolist()\n",
+    "header = ['gvkey'] + map(int,header)\n",
+    "\n",
+    "arr = np.delete(arr,0,1)\n",
+    "\n",
+    "with open('counting.csv','wb') as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    writer.writerow(header)\n",
+    "    \n",
+    "    i=1  \n",
+    "    for row in arr:        \n",
+    "        line = get_prox(row,arr)\n",
+    "        line = [header[i]] + line             \n",
+    "        writer.writerow(line)\n",
+    "        i += 1"
+   ]
   }
  ],
  "metadata": {
