--- a/5 make features/1 app_citation.ipynb
+++ b/5 make features/1 app_citation.ipynb
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -704,6 +704,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "__r 써서 마무리__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2. weight로 사용할 similarity (tech proximity)\n",
     "__2.1 기업별 patent class vector 제작__\n",
     "- 기업별 patent class 파악 (patent_class, patent_assignee, gvkey join)  \n",
@@ -713,7 +720,8 @@
     "- matrix로 제작 (uspc X gvkey pivot), count를 비율로 변경 \n",
     "\n",
     "__2.2 기업간 proximity matrix 제작__\n",
-    "- 예전에 햇던 거 조금 수정하면 됨"
+    "- 전체 기업 중 appcit_matrix에 있는 기업만 고르기 (appcit_matrix의 0번째 col, class_vector join)\n",
+    "- 함수 사용 matrix 제작"
    ]
   },
   {
@@ -880,7 +888,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "bio = pd.read_csv('bio_temp.csv')\n",
@@ -912,7 +922,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.chdir('E:/apps/appcit measure')\n",
@@ -936,21 +948,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import csv\n",
     "import math\n",
-    "from math import sqrt \n",
+    "from math import sqrt\n",
     "\n",
+    "os.chdir('E:/apps/appcit measure')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "def prox_numer(l1,l2):\n",
     "    cnt = 0.0\n",
     "    for i in xrange(len(l1)):\n",
@@ -958,7 +979,7 @@
     "            w= float(l1[i]) * l2[i]\n",
     "            cnt += w\n",
     "    \n",
-    "    return round(cnt,3) \n",
+    "    return cnt \n",
     "\n",
     "def prox_denom(l1,l2):\n",
     "    a = sqrt(sum(map(lambda x: x**2, l1)))\n",
@@ -967,7 +988,7 @@
     "    return a*b \n",
     "\n",
     "def proximity(l1,l2):\n",
-    "    return prox_numer(l1,l2) / prox_denom(l1,l2)\n",
+    "    return round(prox_numer(l1,l2) / prox_denom(l1,l2),3)\n",
     "\n",
     "def get_prox(l1,arr):\n",
     "    sim = []\n",
@@ -979,38 +1000,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.812 0.81206157402 0.999924175676\n"
-     ]
-    }
-   ],
-   "source": [
-    "def prox_denom(l1,l2):\n",
-    "    a = sqrt(sum(map(lambda x: x**2, l1)))\n",
-    "    b = sqrt(sum(map(lambda x: x**2, l2)))\n",
-    "    \n",
-    "    return a*b \n",
-    "\n",
-    "l1 = [0.1,0.9]\n",
-    "l2 = [0.11,0.89]\n",
-    "\n",
-    "print prox_numer(l1,l2), prox_denom(l1,l2), prox_numer(l1,l2)/prox_denom(l1,l2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def final(ind,y):\n",
+    "    gvkey = 'appcit_matrix_' + ind + '_' + str(y) +'.csv'\n",
+    "    clsvec = 'class_vector_' + ind + '_' + str(y) +'.csv'\n",
+    "\n",
+    "    df = pd.read_csv(gvkey).iloc[:,0].to_frame()\n",
+    "    df1 = pd.read_csv(clsvec)\n",
+    "    \n",
+    "    df = df.merge(df1,how='left',on='gvkey')\n",
+    "    arr = df.values\n",
+    "\n",
+    "    header = arr[:,0].tolist()\n",
+    "    header = ['gvkey'] + map(int,header)\n",
+    "\n",
+    "    arr = np.delete(arr,0,1)\n",
+    "    \n",
+    "    fname = 'proximity_' + ind + '_' + str(y) +'.csv'\n",
+    "    with open(fname,'wb') as f:\n",
+    "        writer = csv.writer(f)\n",
+    "        writer.writerow(header)\n",
+    "\n",
+    "        i=1  \n",
+    "        for row in arr:        \n",
+    "            line = get_prox(row,arr)\n",
+    "            line = [header[i]] + line             \n",
+    "            writer.writerow(line)\n",
+    "            i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for y in range(2005,2013):\n",
+    "    final('bio',y)\n",
+    "    final('EE&IT',y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. weight sum\n",
+    "- matrix끼리 곱하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_appcit(ind,y):\n",
+    "    cit = 'appcit_matrix_' + ind + '_' + str(y) +'.csv'\n",
+    "    prox = 'proximity_' + ind + '_' + str(y) +'.csv'\n",
+    "    \n",
+    "    cit = pd.read_csv(cit)\n",
+    "    prox = pd.read_csv(prox)\n",
+    "\n",
+    "    df = cit * prox\n",
+    "\n",
+    "    df['app_cit'] = 0.0\n",
+    "    \n",
+    "    for i in range(0,len(df)):\n",
+    "        df.loc[i,'gvkey'] = int(sqrt(df.loc[i,'gvkey']))\n",
+    "        df.loc[i,'app_cit'] = sum(df.iloc[i,1:]) - df.iloc[i,i+1]\n",
+    "        \n",
+    "    df = df.loc[:,['gvkey','app_cit']]\n",
+    "    \n",
+    "    fname = 'appcit_' + ind + '_' + str(y) +'.csv'\n",
+    "    df.to_csv(fname,index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for y in range(2005,2013):\n",
+    "    get_appcit('bio',y)\n",
+    "    get_appcit('EE&IT',y)"
+   ]
   }
  ],
  "metadata": {
