app citation 마무리
17.10.31

--- a/5 make features/1 app_citation.ipynb
+++ b/5 make features/1 app_citation.ipynb
@@ -1078,7 +1078,8 @@
     "        df.loc[i,'gvkey'] = int(sqrt(df.loc[i,'gvkey']))\n",
     "        df.loc[i,'app_cit'] = sum(df.iloc[i,1:]) - df.iloc[i,i+1]\n",
     "        \n",
-    "    df = df.loc[:,['gvkey','app_cit']]\n",
+    "    df['year'] = y\n",
+    "    df = df.loc[:,['gvkey','year','app_cit']]\n",
     "    \n",
     "    fname = 'appcit_' + ind + '_' + str(y) +'.csv'\n",
     "    df.to_csv(fname,index=False)"
@@ -1087,12 +1088,55 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for y in range(2005,2013):\n",
     "    get_appcit('bio',y)\n",
     "    get_appcit('EE&IT',y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 하나로 만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "bio = pd.read_csv('appcit_bio_2005.csv')\n",
+    "ee = pd.read_csv('appcit_EE&IT_2005.csv')\n",
+    "\n",
+    "for y in range(2006,2013):\n",
+    "    df = pd.read_csv('appcit_bio_' + str(y) +'.csv')\n",
+    "    bio = pd.concat([bio,df],ignore_index=True)\n",
+    "    \n",
+    "    df = pd.read_csv('appcit_EE&IT_' + str(y) +'.csv')\n",
+    "    ee = pd.concat([ee,df],ignore_index=True)\n",
+    "    \n",
+    "bio.sort_values(by=['gvkey','year'],inplace=True)\n",
+    "bio.reset_index(drop=True, inplace=True)\n",
+    "ee.sort_values(by=['gvkey','year'],inplace=True)\n",
+    "ee.reset_index(drop=True,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bio.to_csv('appcit_bio.csv',index=False)\n",
+    "ee.to_csv('appcit_EE&IT.csv',index=False)"
    ]
   }
  ],
