patcit 변수 추출중
17.11.26

--- a/for_test.ipynb
+++ b/for_test.ipynb
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -1201,23 +1201,29 @@
     "                pid = int(pid)                          \n",
     "                for cit in root.iter('citation'):   #using iter because of multi-assignee apps \n",
     "                    did = cit[0][0]\n",
-    "                    cited = cit[1].text              \n",
-    "                    \n",
-    "                    if did.find('country').text != 'US':\n",
-    "                        break \n",
-    "                     \n",
-    "                    cid = did.find('doc-number').text\n",
-    "                    if len(cid) < 8:\n",
-    "                        continue\n",
-    "                    \n",
-    "                    cid=cid.replace('/','')\n",
-    "                    cit_dum = 1 if cited.split()[-1] == 'examiner' else 0\n",
-    "                    \n",
-    "                    writer.writerow([pid,cid,cit_dum])\n",
+    "                    try:\n",
+    "                        cited = cit[1].text              \n",
+    "                        try:\n",
+    "                            if did.find('country').text != 'US':  #if foreign cit, go to next doc\n",
+    "                                break \n",
+    "\n",
+    "                            cid = did.find('doc-number').text\n",
+    "                            if len(cid) > 8:     #if app cit, go to next doc\n",
+    "                                break\n",
+    "                            \n",
+    "                            cit_dum = 1 if cited.split()[-1] == 'examiner' else 0\n",
+    "\n",
+    "                            writer.writerow([pid,cid,cit_dum])\n",
+    "\n",
+    "                        except AttributeError:         #if other cit, go to next doc\n",
+    "                            break\n",
+    "                        \n",
+    "                    except IndexError:    #if other cit, go to next doc\n",
+    "                        break\n",
     "                        \n",
     "            except ValueError:      #if pid != int, go to the next doc\n",
     "                continue    \n",
-    "                             \n",
+    "\n",
     "        date = dt.datetime.strptime(date,'%Y%m%d')   #Let's move on to next xml\n",
     "        date += dt.timedelta(weeks=1)\n",
     "        date = date.strftime('%Y%m%d')   "
@@ -1377,7 +1383,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "arr = pd.read_csv('sample.csv').values\n",
