--- a/appcit trend.ipynb
+++ b/appcit trend.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "scrolled": false
@@ -145,16 +145,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(47522, 43911)"
+       "(139224, 850774)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,16 +165,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(651011, 322047)"
+       "(1135343, 3200986)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,16 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(629987, 297874)"
+       "(1061284, 2680241)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -282,16 +282,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(707824, 443599)"
+       "(1233406, 4601174)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -323,123 +323,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>number</th>\n",
-       "      <th>count</th>\n",
-       "      <th>sum</th>\n",
-       "      <th>ratio_t</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2005</td>\n",
-       "      <td>5757</td>\n",
-       "      <td>4109</td>\n",
-       "      <td>140656.0</td>\n",
-       "      <td>0.040930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2006</td>\n",
-       "      <td>13178</td>\n",
-       "      <td>4731</td>\n",
-       "      <td>197627.0</td>\n",
-       "      <td>0.066681</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2007</td>\n",
-       "      <td>24477</td>\n",
-       "      <td>4263</td>\n",
-       "      <td>210377.0</td>\n",
-       "      <td>0.116348</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>25182</td>\n",
-       "      <td>3599</td>\n",
-       "      <td>184696.0</td>\n",
-       "      <td>0.136343</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2009</td>\n",
-       "      <td>47865</td>\n",
-       "      <td>4394</td>\n",
-       "      <td>285199.0</td>\n",
-       "      <td>0.167830</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>120190</td>\n",
-       "      <td>7536</td>\n",
-       "      <td>580300.0</td>\n",
-       "      <td>0.207117</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2011</td>\n",
-       "      <td>187149</td>\n",
-       "      <td>8420</td>\n",
-       "      <td>766736.0</td>\n",
-       "      <td>0.244085</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>270922</td>\n",
-       "      <td>10446</td>\n",
-       "      <td>986501.0</td>\n",
-       "      <td>0.274629</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   year  number  count       sum   ratio_t\n",
-       "0  2005    5757   4109  140656.0  0.040930\n",
-       "1  2006   13178   4731  197627.0  0.066681\n",
-       "2  2007   24477   4263  210377.0  0.116348\n",
-       "3  2008   25182   3599  184696.0  0.136343\n",
-       "4  2009   47865   4394  285199.0  0.167830\n",
-       "5  2010  120190   7536  580300.0  0.207117\n",
-       "6  2011  187149   8420  766736.0  0.244085\n",
-       "7  2012  270922  10446  986501.0  0.274629"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bio['ratio_t'] = bio['number'] / bio['sum']\n",
     "ee['ratio_t'] = ee['number'] / ee['sum']"
@@ -447,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -484,100 +370,100 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2005</td>\n",
-       "      <td>5757</td>\n",
-       "      <td>4109</td>\n",
-       "      <td>140656.0</td>\n",
-       "      <td>0.040930</td>\n",
-       "      <td>0.032640</td>\n",
-       "      <td>0.797464</td>\n",
+       "      <td>11625</td>\n",
+       "      <td>12410</td>\n",
+       "      <td>253299.0</td>\n",
+       "      <td>0.045894</td>\n",
+       "      <td>0.036127</td>\n",
+       "      <td>0.787183</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2006</td>\n",
-       "      <td>13178</td>\n",
-       "      <td>4731</td>\n",
-       "      <td>197627.0</td>\n",
-       "      <td>0.066681</td>\n",
-       "      <td>0.055519</td>\n",
-       "      <td>0.832600</td>\n",
+       "      <td>30251</td>\n",
+       "      <td>15226</td>\n",
+       "      <td>364780.0</td>\n",
+       "      <td>0.082929</td>\n",
+       "      <td>0.069626</td>\n",
+       "      <td>0.839576</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2007</td>\n",
-       "      <td>24477</td>\n",
-       "      <td>4263</td>\n",
-       "      <td>210377.0</td>\n",
-       "      <td>0.116348</td>\n",
-       "      <td>0.101147</td>\n",
-       "      <td>0.869347</td>\n",
+       "      <td>45461</td>\n",
+       "      <td>14137</td>\n",
+       "      <td>367385.0</td>\n",
+       "      <td>0.123742</td>\n",
+       "      <td>0.105617</td>\n",
+       "      <td>0.853523</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2008</td>\n",
-       "      <td>25182</td>\n",
-       "      <td>3599</td>\n",
-       "      <td>184696.0</td>\n",
-       "      <td>0.136343</td>\n",
-       "      <td>0.118595</td>\n",
-       "      <td>0.869828</td>\n",
+       "      <td>52691</td>\n",
+       "      <td>12744</td>\n",
+       "      <td>346889.0</td>\n",
+       "      <td>0.151896</td>\n",
+       "      <td>0.131434</td>\n",
+       "      <td>0.865290</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2009</td>\n",
-       "      <td>47865</td>\n",
-       "      <td>4394</td>\n",
-       "      <td>285199.0</td>\n",
-       "      <td>0.167830</td>\n",
-       "      <td>0.147595</td>\n",
-       "      <td>0.879432</td>\n",
+       "      <td>94171</td>\n",
+       "      <td>14311</td>\n",
+       "      <td>498405.0</td>\n",
+       "      <td>0.188945</td>\n",
+       "      <td>0.166959</td>\n",
+       "      <td>0.883637</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>2010</td>\n",
-       "      <td>120190</td>\n",
-       "      <td>7536</td>\n",
-       "      <td>580300.0</td>\n",
-       "      <td>0.207117</td>\n",
-       "      <td>0.185066</td>\n",
-       "      <td>0.893535</td>\n",
+       "      <td>205720</td>\n",
+       "      <td>21280</td>\n",
+       "      <td>921051.0</td>\n",
+       "      <td>0.223354</td>\n",
+       "      <td>0.199728</td>\n",
+       "      <td>0.894225</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>2011</td>\n",
-       "      <td>187149</td>\n",
-       "      <td>8420</td>\n",
-       "      <td>766736.0</td>\n",
-       "      <td>0.244085</td>\n",
-       "      <td>0.223902</td>\n",
-       "      <td>0.917312</td>\n",
+       "      <td>314437</td>\n",
+       "      <td>22457</td>\n",
+       "      <td>1204623.0</td>\n",
+       "      <td>0.261025</td>\n",
+       "      <td>0.238111</td>\n",
+       "      <td>0.912215</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>2012</td>\n",
-       "      <td>270922</td>\n",
-       "      <td>10446</td>\n",
-       "      <td>986501.0</td>\n",
-       "      <td>0.274629</td>\n",
-       "      <td>0.253501</td>\n",
-       "      <td>0.923066</td>\n",
+       "      <td>423056</td>\n",
+       "      <td>26605</td>\n",
+       "      <td>1475889.0</td>\n",
+       "      <td>0.286645</td>\n",
+       "      <td>0.263118</td>\n",
+       "      <td>0.917923</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   year  number  count       sum   ratio_t  ratio_bf  ratio_bf/t\n",
-       "0  2005    5757   4109  140656.0  0.040930  0.032640    0.797464\n",
-       "1  2006   13178   4731  197627.0  0.066681  0.055519    0.832600\n",
-       "2  2007   24477   4263  210377.0  0.116348  0.101147    0.869347\n",
-       "3  2008   25182   3599  184696.0  0.136343  0.118595    0.869828\n",
-       "4  2009   47865   4394  285199.0  0.167830  0.147595    0.879432\n",
-       "5  2010  120190   7536  580300.0  0.207117  0.185066    0.893535\n",
-       "6  2011  187149   8420  766736.0  0.244085  0.223902    0.917312\n",
-       "7  2012  270922  10446  986501.0  0.274629  0.253501    0.923066"
+       "   year  number  count        sum   ratio_t  ratio_bf  ratio_bf/t\n",
+       "0  2005   11625  12410   253299.0  0.045894  0.036127    0.787183\n",
+       "1  2006   30251  15226   364780.0  0.082929  0.069626    0.839576\n",
+       "2  2007   45461  14137   367385.0  0.123742  0.105617    0.853523\n",
+       "3  2008   52691  12744   346889.0  0.151896  0.131434    0.865290\n",
+       "4  2009   94171  14311   498405.0  0.188945  0.166959    0.883637\n",
+       "5  2010  205720  21280   921051.0  0.223354  0.199728    0.894225\n",
+       "6  2011  314437  22457  1204623.0  0.261025  0.238111    0.912215\n",
+       "7  2012  423056  26605  1475889.0  0.286645  0.263118    0.917923"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,9 +476,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 17,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -629,100 +515,100 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2005</td>\n",
-       "      <td>1611</td>\n",
-       "      <td>2158</td>\n",
-       "      <td>39600.0</td>\n",
-       "      <td>0.040682</td>\n",
-       "      <td>0.014091</td>\n",
-       "      <td>0.346369</td>\n",
+       "      <td>62336</td>\n",
+       "      <td>73352</td>\n",
+       "      <td>1017248.0</td>\n",
+       "      <td>0.061279</td>\n",
+       "      <td>0.027763</td>\n",
+       "      <td>0.453061</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2006</td>\n",
-       "      <td>7161</td>\n",
-       "      <td>3575</td>\n",
-       "      <td>79299.0</td>\n",
-       "      <td>0.090304</td>\n",
-       "      <td>0.045486</td>\n",
-       "      <td>0.503701</td>\n",
+       "      <td>156069</td>\n",
+       "      <td>95330</td>\n",
+       "      <td>1519136.0</td>\n",
+       "      <td>0.102735</td>\n",
+       "      <td>0.050052</td>\n",
+       "      <td>0.487195</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2007</td>\n",
-       "      <td>10931</td>\n",
-       "      <td>3116</td>\n",
-       "      <td>80657.0</td>\n",
-       "      <td>0.135525</td>\n",
-       "      <td>0.072281</td>\n",
-       "      <td>0.533346</td>\n",
+       "      <td>221426</td>\n",
+       "      <td>86900</td>\n",
+       "      <td>1486652.0</td>\n",
+       "      <td>0.148943</td>\n",
+       "      <td>0.078800</td>\n",
+       "      <td>0.529062</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2008</td>\n",
-       "      <td>19441</td>\n",
-       "      <td>3935</td>\n",
-       "      <td>103089.0</td>\n",
-       "      <td>0.188585</td>\n",
-       "      <td>0.107063</td>\n",
-       "      <td>0.567718</td>\n",
+       "      <td>321787</td>\n",
+       "      <td>91285</td>\n",
+       "      <td>1665403.0</td>\n",
+       "      <td>0.193219</td>\n",
+       "      <td>0.108104</td>\n",
+       "      <td>0.559488</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2009</td>\n",
-       "      <td>37376</td>\n",
-       "      <td>4812</td>\n",
-       "      <td>148322.0</td>\n",
-       "      <td>0.251992</td>\n",
-       "      <td>0.162929</td>\n",
-       "      <td>0.646565</td>\n",
+       "      <td>486697</td>\n",
+       "      <td>99169</td>\n",
+       "      <td>2012925.0</td>\n",
+       "      <td>0.241786</td>\n",
+       "      <td>0.143923</td>\n",
+       "      <td>0.595249</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>2010</td>\n",
-       "      <td>86206</td>\n",
-       "      <td>7759</td>\n",
-       "      <td>313354.0</td>\n",
-       "      <td>0.275107</td>\n",
-       "      <td>0.189380</td>\n",
-       "      <td>0.688386</td>\n",
+       "      <td>779628</td>\n",
+       "      <td>126378</td>\n",
+       "      <td>2787964.0</td>\n",
+       "      <td>0.279641</td>\n",
+       "      <td>0.170533</td>\n",
+       "      <td>0.609828</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>2011</td>\n",
-       "      <td>113188</td>\n",
-       "      <td>8122</td>\n",
-       "      <td>332545.0</td>\n",
-       "      <td>0.340369</td>\n",
-       "      <td>0.247401</td>\n",
-       "      <td>0.726862</td>\n",
+       "      <td>978976</td>\n",
+       "      <td>129485</td>\n",
+       "      <td>3114006.0</td>\n",
+       "      <td>0.314378</td>\n",
+       "      <td>0.202649</td>\n",
+       "      <td>0.644602</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>2012</td>\n",
-       "      <td>158338</td>\n",
-       "      <td>10385</td>\n",
-       "      <td>386279.0</td>\n",
-       "      <td>0.409906</td>\n",
-       "      <td>0.287515</td>\n",
-       "      <td>0.701417</td>\n",
+       "      <td>1346720</td>\n",
+       "      <td>147757</td>\n",
+       "      <td>3635715.0</td>\n",
+       "      <td>0.370414</td>\n",
+       "      <td>0.242754</td>\n",
+       "      <td>0.655358</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   year  number  count       sum   ratio_t  ratio_bf  ratio_bf/t\n",
-       "0  2005    1611   2158   39600.0  0.040682  0.014091    0.346369\n",
-       "1  2006    7161   3575   79299.0  0.090304  0.045486    0.503701\n",
-       "2  2007   10931   3116   80657.0  0.135525  0.072281    0.533346\n",
-       "3  2008   19441   3935  103089.0  0.188585  0.107063    0.567718\n",
-       "4  2009   37376   4812  148322.0  0.251992  0.162929    0.646565\n",
-       "5  2010   86206   7759  313354.0  0.275107  0.189380    0.688386\n",
-       "6  2011  113188   8122  332545.0  0.340369  0.247401    0.726862\n",
-       "7  2012  158338  10385  386279.0  0.409906  0.287515    0.701417"
+       "   year   number   count        sum   ratio_t  ratio_bf  ratio_bf/t\n",
+       "0  2005    62336   73352  1017248.0  0.061279  0.027763    0.453061\n",
+       "1  2006   156069   95330  1519136.0  0.102735  0.050052    0.487195\n",
+       "2  2007   221426   86900  1486652.0  0.148943  0.078800    0.529062\n",
+       "3  2008   321787   91285  1665403.0  0.193219  0.108104    0.559488\n",
+       "4  2009   486697   99169  2012925.0  0.241786  0.143923    0.595249\n",
+       "5  2010   779628  126378  2787964.0  0.279641  0.170533    0.609828\n",
+       "6  2011   978976  129485  3114006.0  0.314378  0.202649    0.644602\n",
+       "7  2012  1346720  147757  3635715.0  0.370414  0.242754    0.655358"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
