compustat, litigation 변수 수정
17.11.26

--- a/5 make features/1 app_citation.ipynb
+++ b/5 make features/1 app_citation.ipynb
@@ -1132,7 +1132,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "bio.to_csv('appcit_bio.csv',index=False)\n",
