--- a/5 make features/4 litigation.ipynb
+++ b/5 make features/4 litigation.ipynb
@@ -557,6 +557,96 @@
     "    get_lit_var(biod,types='d',interval=i).to_csv('feature/lit_d_'+str(i)+'_bio.csv',index=False)\n",
     "    get_lit_var(eed,types='d',interval=i).to_csv('feature/lit_d_'+str(i)+'_EE&IT.csv',index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. 변수 다시 제작\n",
+    "- only defence\n",
+    "- t, t+1: t로 다 만든 후, year-1 해버리면 t+1이네\n",
+    "- binary, counting\n",
+    "- counter-deleted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['gvkey', 'date_filed', 'year', 'party_type', 'counter']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import csv\n",
+    "import os\n",
+    "import math\n",
+    "os.chdir('E:/apps')\n",
+    "\n",
+    "bio = pd.read_csv('biod.csv')\n",
+    "ee = pd.read_csv('eed.csv')\n",
+    "\n",
+    "list(bio)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_lit_var(df):\n",
+    "    df0 = df.loc[:,['gvkey','year']]\n",
+    "    df0['lit_t'] = 0\n",
+    "    df0 = df0.groupby(['gvkey','year'], as_index=False).count()\n",
+    "    \n",
+    "    df1 = df.loc[:,['gvkey','year']]\n",
+    "    df1['year'] = df1['year']-1\n",
+    "    df1['lit_t1'] = 0\n",
+    "    df1 = df1.groupby(['gvkey','year'], as_index=False).count()\n",
+    "    \n",
+    "    df2 = df.loc[:,['gvkey','year','counter']]\n",
+    "    df2 = df2.loc[df2['counter']==0,['gvkey','year']]\n",
+    "    df2['lit_t_nc'] = 0\n",
+    "    df2 = df2.groupby(['gvkey','year'], as_index=False).count()\n",
+    "    \n",
+    "    df3 = df.loc[:,['gvkey','year','counter']]\n",
+    "    df3 = df3.loc[df3['counter']==0,['gvkey','year']]\n",
+    "    df3['year'] = df3['year']-1\n",
+    "    df3['lit_t1_nc'] = 0\n",
+    "    df3 = df3.groupby(['gvkey','year'], as_index=False).count()\n",
+    "    \n",
+    "    return [df0,df1,df2,df3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a = get_lit_var(bio)\n",
+    "b = get_lit_var(ee)\n",
+    "c = ['t','t1','t_nc','t1_nc']\n",
+    "\n",
+    "for i in range(0,4):\n",
+    "    a[i].to_csv('feature/lit_'+c[i]+'_bio.csv',index=False)\n",
+    "    b[i].to_csv('feature/lit_'+c[i]+'_EE&IT.csv',index=False)"
+   ]
   }
  ],
  "metadata": {
