--- a/5 make features/5 final csv.ipynb
+++ b/5 make features/5 final csv.ipynb
@@ -670,6 +670,224 @@
     "bio.to_csv('X_bio_na_dum_3.csv',index=False)\n",
     "ee.to_csv('X_EE&IT_na_dum_3.csv',index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. 보수공사\n",
+    "- compustat에서 빠진 변수\n",
+    "- patent에서 빠진 변수"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__compustat에서 빠진 변수__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "bio = pd.read_csv('X_bio_na.csv')\n",
+    "ee = pd.read_csv('X_EE&IT_na.csv')\n",
+    "\n",
+    "df = pd.read_csv('compu_bio.csv')\n",
+    "df1 = pd.read_csv('compu_EE&IT.csv')\n",
+    "\n",
+    "df = df.loc[:,['gvkey','fyear','xrd','emp']]\n",
+    "df1 = df1.loc[:,['gvkey','fyear','xrd','emp']]\n",
+    "\n",
+    "df = df.rename(columns ={'fyear':'year'})\n",
+    "df1 = df1.rename(columns ={'fyear':'year'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def emp(x):\n",
+    "    if x>0:\n",
+    "        return np.log(x*1000)\n",
+    "    else:\n",
+    "        return np.nan\n",
+    "    \n",
+    "def rnd(x):\n",
+    "    if x>0:\n",
+    "        return np.log(x*1000000)\n",
+    "    else:\n",
+    "        return np.nan\n",
+    "\n",
+    "df['emp'] = df['emp'].apply(emp)\n",
+    "df['rnd'] = df['xrd'].apply(rnd)\n",
+    "del df['xrd']\n",
+    "\n",
+    "df1['emp'] = df1['emp'].apply(emp)\n",
+    "df1['rnd'] = df1['xrd'].apply(rnd)\n",
+    "del df1['xrd']\n",
+    "\n",
+    "bio = bio.merge(df,how='left',on=['gvkey','year'])\n",
+    "ee = ee.merge(df1,how='left',on=['gvkey','year'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gvkey             False\n",
+       "year              False\n",
+       "app_cit           False\n",
+       "pat_size          False\n",
+       "num_claims        False\n",
+       "bwd               False\n",
+       "fwd               False\n",
+       "self              False\n",
+       "self_fwd          False\n",
+       "self_ratio         True\n",
+       "self_ratio_fwd     True\n",
+       "roa                True\n",
+       "margin             True\n",
+       "rdi                True\n",
+       "mkt_4              True\n",
+       "mkt_3              True\n",
+       "herf_cls          False\n",
+       "emp                True\n",
+       "rnd                True\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bio.isnull().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gvkey             False\n",
+       "year              False\n",
+       "app_cit           False\n",
+       "pat_size          False\n",
+       "num_claims        False\n",
+       "bwd               False\n",
+       "fwd               False\n",
+       "self              False\n",
+       "self_fwd          False\n",
+       "self_ratio        False\n",
+       "self_ratio_fwd    False\n",
+       "roa                True\n",
+       "margin             True\n",
+       "rdi                True\n",
+       "mkt_4              True\n",
+       "mkt_3              True\n",
+       "herf_cls          False\n",
+       "emp                True\n",
+       "rnd                True\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ee.isnull().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "bio.to_csv('X_bio_na1.csv',index=False)\n",
+    "ee.to_csv('X_EE&IT_na1.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1445, 2665)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(bio),len(ee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1224, 2157)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bio.dropna(inplace=True)\n",
+    "ee.dropna(inplace=True)\n",
+    "\n",
+    "len(bio),len(ee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "bio.to_csv('X_bio_dropna.csv',index=False)\n",
+    "ee.to_csv('X_EE&IT_dropna.csv',index=False)"
+   ]
   }
  ],
  "metadata": {
