--- a/5 make features/5 final csv.ipynb
+++ b/5 make features/5 final csv.ipynb
@@ -888,6 +888,162 @@
     "bio.to_csv('X_bio_dropna.csv',index=False)\n",
     "ee.to_csv('X_EE&IT_dropna.csv',index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__patent에서 빠진 변수__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1445, 2665)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bio = pd.read_csv('X_bio_na1.csv')\n",
+    "ee = pd.read_csv('X_EE&IT_na1.csv')\n",
+    "\n",
+    "len(bio), len(ee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1445, 2665)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('patcit_bio.csv')\n",
+    "df1 = pd.read_csv('patcit_EE&IT.csv')\n",
+    "\n",
+    "bio = bio.merge(df,how='left',on=['gvkey','year'])\n",
+    "ee = ee.merge(df1,how='left',on=['gvkey','year'])\n",
+    "\n",
+    "df = pd.read_csv('patent_stock_bio.csv')\n",
+    "df1 = pd.read_csv('patent_stock_EE&IT.csv') \n",
+    "\n",
+    "bio = bio.merge(df,how='left',on=['gvkey','year'])\n",
+    "ee = ee.merge(df1,how='left',on=['gvkey','year'])\n",
+    "\n",
+    "len(bio),len(ee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "bio.to_csv('X_bio_na2.csv',index=False)\n",
+    "ee.to_csv('X_EE&IT_na2.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1120, 1977)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bio.dropna(inplace=True)\n",
+    "ee.dropna(inplace=True)\n",
+    "\n",
+    "len(bio),len(ee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "bio.to_csv('X_bio_dropna.csv',index=False)\n",
+    "ee.to_csv('X_EE&IT_dropna.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__appcit / patcit 만들기__\n",
+    "- 기본 X에는 엑셀로 만듦\n",
+    "- dropna나 만들어보자"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1120, 1977)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bio = pd.read_csv('X_bio_na2.csv')\n",
+    "ee = pd.read_csv('X_EE&IT_na2.csv')\n",
+    "\n",
+    "bio.dropna(inplace=True)\n",
+    "ee.dropna(inplace=True)\n",
+    "\n",
+    "len(bio),len(ee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "bio.to_csv('X_bio_dropna.csv',index=False)\n",
+    "ee.to_csv('X_EE&IT_dropna.csv',index=False)"
+   ]
   }
  ],
  "metadata": {
