litigation measure 마무리
17.12.6

--- a/5 make features/4 litigation.ipynb
+++ b/5 make features/4 litigation.ipynb
@@ -607,43 +607,38 @@
    },
    "outputs": [],
    "source": [
-    "def get_lit_var(df):\n",
-    "    df0 = df.loc[:,['gvkey','year']]\n",
-    "    df0['lit_t'] = 0\n",
-    "    df0 = df0.groupby(['gvkey','year'], as_index=False).count()\n",
-    "    \n",
+    "def get_lit_var(df):    \n",
     "    df1 = df.loc[:,['gvkey','year']]\n",
     "    df1['year'] = df1['year']-1\n",
     "    df1['lit_t1'] = 0\n",
-    "    df1 = df1.groupby(['gvkey','year'], as_index=False).count()\n",
-    "    \n",
-    "    df2 = df.loc[:,['gvkey','year','counter']]\n",
-    "    df2 = df2.loc[df2['counter']==0,['gvkey','year']]\n",
-    "    df2['lit_t_nc'] = 0\n",
-    "    df2 = df2.groupby(['gvkey','year'], as_index=False).count()\n",
-    "    \n",
+    "    df1 = df1.groupby(['gvkey','year'], as_index=False).count()    \n",
+    "       \n",
     "    df3 = df.loc[:,['gvkey','year','counter']]\n",
     "    df3 = df3.loc[df3['counter']==0,['gvkey','year']]\n",
     "    df3['year'] = df3['year']-1\n",
     "    df3['lit_t1_nc'] = 0\n",
     "    df3 = df3.groupby(['gvkey','year'], as_index=False).count()\n",
     "    \n",
-    "    return [df0,df1,df2,df3]"
+    "    df4 = df.loc[:,['gvkey','year','counter']]\n",
+    "    df4 = df4.loc[df4['counter']==1,['gvkey','year']]\n",
+    "    df4['lit_t_c'] = 0\n",
+    "    df4['year'] = df4['year']-1\n",
+    "    df4 = df4.groupby(['gvkey','year'], as_index=False).count()\n",
+    "    \n",
+    "    return [df1,df3,df4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "a = get_lit_var(bio)\n",
     "b = get_lit_var(ee)\n",
-    "c = ['t','t1','t_nc','t1_nc']\n",
+    "c = ['t1','t1_nc','t1_c']\n",
     "\n",
-    "for i in range(0,4):\n",
+    "for i in range(0,3):\n",
     "    a[i].to_csv('feature/lit_'+c[i]+'_bio.csv',index=False)\n",
     "    b[i].to_csv('feature/lit_'+c[i]+'_EE&IT.csv',index=False)"
    ]
