디펜스용 마지막 table 제작
17.12.20

--- a/5 make features/4 litigation.ipynb
+++ b/5 make features/4 litigation.ipynb
@@ -631,7 +631,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a = get_lit_var(bio)\n",
