--- a/5 make features/5 final csv.ipynb
+++ b/5 make features/5 final csv.ipynb
@@ -12,7 +12,9 @@
     "\n",
     "### 2. DV 고르기 (3, 4, 5년 짜리, 공수) \n",
     "\n",
-    "### 3. dummy 제작 (firm fixed, year fixed)"
+    "### 3. dummy 제작 (firm fixed, year fixed)\n",
+    "\n",
+    "### 4. 보수공사"
    ]
   },
   {
@@ -1003,34 +1005,40 @@
    "metadata": {},
    "source": [
     "__appcit / patcit 만들기__\n",
-    "- 기본 X에는 엑셀로 만듦\n",
-    "- dropna나 만들어보자"
+    "- non-weighted: edge_list groupby count \n",
+    "- 기업별 app/pat 비율 구하기\n",
+    "- X 에다가 붙이기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#-*- coding: utf-8 -*-\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "os.chdir('E:/apps')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1120, 1977)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "bio = pd.read_csv('X_bio_na2.csv')\n",
-    "ee = pd.read_csv('X_EE&IT_na2.csv')\n",
+    "a_bio = pd.read_csv('app_cit_edge_bio.csv')\n",
+    "a_ee = pd.read_csv('app_cit_edge_EE&IT.csv')\n",
     "\n",
-    "bio.dropna(inplace=True)\n",
-    "ee.dropna(inplace=True)\n",
-    "\n",
-    "len(bio),len(ee)"
+    "p_bio = pd.read_csv('pat_cit_edge_BIO.csv')\n",
+    "p_ee = pd.read_csv('pat_cit_edge_EE&IT.csv')"
    ]
   },
   {
@@ -1041,8 +1049,181 @@
    },
    "outputs": [],
    "source": [
-    "bio.to_csv('X_bio_dropna.csv',index=False)\n",
-    "ee.to_csv('X_EE&IT_dropna.csv',index=False)"
+    "a_bio = a_bio.groupby(['gvkey','year']).size().reset_index(name='a_counts')\n",
+    "a_ee = a_ee.groupby(['gvkey','year']).size().reset_index(name='a_counts')\n",
+    "\n",
+    "p_bio = p_bio.groupby(['gvkey','year']).size().reset_index(name='p_counts')\n",
+    "p_ee = p_ee.groupby(['gvkey','year']).size().reset_index(name='p_counts')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1287, 2016, 2480, 3065)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(a_bio), len(p_bio), len(a_ee), len(p_ee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "bio = p_bio.merge(a_bio,how='left',on=['gvkey','year']).fillna(0)\n",
+    "ee = p_ee.merge(a_ee,how='left',on=['gvkey','year']).fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2016, 3065)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(bio), len(ee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.12391439623 0.165601874239\n"
+     ]
+    }
+   ],
+   "source": [
+    "bio['ap_ratio'] = bio['a_counts'] / bio['p_counts']\n",
+    "ee['ap_ratio'] = ee['a_counts'] / ee['p_counts']\n",
+    "\n",
+    "print sum(ee['ap_ratio'])/len(ee), sum(bio['ap_ratio'])/len(bio)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1403, 2665)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.chdir('E:/apps/feature')\n",
+    "\n",
+    "bio_x = pd.read_csv('X_bio_avgna.csv') \n",
+    "ee_x = pd.read_csv('X_EE&IT_avgna.csv') \n",
+    "\n",
+    "len(bio_x), len(ee_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1403, 2665)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bio = bio.loc[:,['gvkey','year','ap_ratio']]\n",
+    "ee = ee.loc[:,['gvkey','year','ap_ratio']]\n",
+    "\n",
+    "bio_x = bio_x.merge(bio,how='left',on=['gvkey','year'])\n",
+    "ee_x=ee_x.merge(ee,how='left',on=['gvkey','year'])\n",
+    "\n",
+    "len(bio_x), len(ee_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "bio_x.to_csv('X_bio_avgna_1.csv',index=False)\n",
+    "ee_x.to_csv('X_EE&IT_avgna_1.csv',index=False) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1368, 2637)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bio_x.dropna(inplace=True)\n",
+    "ee_x.dropna(inplace=True)\n",
+    "\n",
+    "len(bio_x),len(ee_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "bio_x.to_csv('X_bio_dropna_1.csv',index=False)\n",
+    "ee_x.to_csv('X_EE&IT_dropna_1.csv',index=False) "
    ]
   }
  ],
